--- a/sample.html
+++ b/sample.html
@@ -11,7 +11,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <div id="main">
+  <div id="main" class="container">
     <div id="qa_chapter">
 
     </div>
