mastache記法からv-htmlに変更

--- a/sample.html
+++ b/sample.html
@@ -18,8 +18,7 @@
 
     </div>
     <hr>
-    <div id="qa_render">
-        {{{message}}}
+    <div id="qa_render" v-html="vue_render">
     </div>
   </div>
 
