--- a/sample.html
+++ b/sample.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div id="main" class="container">
-    <div id="qa_chapter">
+    <div id="qa_chapter" v-html="vue_chapter">
 
     </div>
     <hr>
