変数の名称変更

--- a/sample.html
+++ b/sample.html
@@ -14,11 +14,11 @@
 </head>
 <body>
   <div id="main" class="container">
-    <div id="qa_chapter" v-html="vue_chapter">
+    <div id="qa_chapter" v-html="add_html">
 
     </div>
     <hr>
-    <div id="qa_render" v-html="vue_render">
+    <div id="qa_render" v-html="add_html">
     </div>
   </div>
 
